force-app/main/default/objects/Success_Resource_Plan__c/Success_Resource_Plan__c.object-meta.xml
<CustomObject>
    <label>Success Resource Plan</label>
    <nameField>
        <displayFormat>SRP-{0}</displayFormat>
        <label>Success Resource Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Resource Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>