force-app/main/default/objects/Success_Resource_Plan__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Success Resource Plans</relationshipLabel>
    <relationshipName>Success_Resource_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>