force-app/main/default/objects/Success_Resource_Plan__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <description>Plan code of the related plan</description>
    <formula>Plan__r.Plan_Code__c</formula>
    <inlineHelpText>Plan code of the related plan</inlineHelpText>
    <label>Plan Code</label>
    <type>Text</type>
</CustomField>