force-app/main/default/objects/Success_Resource_Plan__c/fields/Success_Resource__c.field-meta.xml
<CustomField>
    <fullName>Success_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success Resource</label>
    <referenceTo>Success_Resource__c</referenceTo>
    <relationshipLabel>Success Resource Plans</relationshipLabel>
    <relationshipName>Success_Resource_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>