force-app/main/default/objects/Success_Resource_Plan__c/listViews/Find_a_resource.listView-meta.xml
<ListView>
    <fullName>Find_a_resource</fullName>
    <columns>NAME</columns>
    <columns>Plan__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>Success_Resource__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Success_Resource__c</field>
        <operation>equals</operation>
        <value>SR-24200</value>
    </filters>
    <label>Find a resource</label>
</ListView>